
   FALCON-581 Refactor code for cross product and make it a method 
   (Raghav Kumar Gautam via Arpit Gupta) 
   
   FALCON-597 String logged at the start and end of the merlin test are slightly 
   mismatched (Raghav Kumar Gautam via Arpit Gupta)

  OPTIMIZATIONS
   FALCON-681 delete duplicate feed retention test from falcon regression (SamarthG)

  BUG FIXES
   FALCON-1277 Fix SearchApiTest according to api changes (Paul Isaychuk via Ruslan Ostafiychuk)

   FALCON-1275 PrismFeedUpdateTest is using root directory (Raghav Kumar Gautam via Ruslan Ostafiychuk)

   FALCON-1274 PrismProcessScheduleTest is using root directory (Raghav Kumar Gautam via Ruslan Ostafiychuk)

   FALCON-1273 ProcessLateRerunTest still using root directory (Raghav Kumar Gautam via Ruslan Ostafiychuk)

   FALCON-1272 InstanceParamTest still using root directory (Raghav Kumar Gautam via Ruslan Ostafiychuk)

   FALCON-1269 Update InstancePageTest and other after UI changes (Ruslan Ostafiychuk)

   FALCON-1270 SearchUI. Login screen changed to not have password field (Namit Maheshwari via Ruslan Ostafiychuk)

   FALCON-1266 LineageApiTest test fixes (Raghav Kumar Gautam via Ruslan Ostafiychuk)

   FALCON-1265 ListProcessInstancesTest test fixes (Raghav Kumar Gautam via Ruslan Ostafiychuk)

   FALCON-1267 Fix Processsetuptest#testinoutstepdropdownfeeds (Namit Maheshwari via Raghav Kumar Gautam)

   FALCON-1264 Fix validity parsing in ProcessWizardPage (Paul Isaychuk via Ruslan Ostafiychuk)

   FALCON-1263 Fix waitTillInstanceReachState for EntityType.PROCESS (Ruslan Ostafiychuk)

   FALCON-1258 Fix feed validity and fortify ELExpFutureAndLatestTest (Ruslan Ostafiychuk)

   FALCON-1257 Fix feedAclUpdate and processAclUpdate (Ruslan Ostafiychuk)

   FALCON-1255 Fix list of expected statuses in drop down on Entity Page (Ruslan Ostafiychuk)

   FALCON-1246 Remove wrong parameter from update signature, delete related tests (Paul Isaychuk)
